Style a home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
 
 	<body>
 		<!-- Header -->
-		<header>{% include 'header.html' %}</header>
+		{% block header %} {% endblock %}
 
 		<!-- Content -->
 		<main>{% block content %} {% endblock content %}</main>
