--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -5,5 +5,28 @@
 
 {% block content %} 
 
+{% include 'header.html' %}
+<section
+	id="hero"
+	class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40 widescreen:section-min-height tallscreen:section-min-height h-full mx-auto w-full max-w-screen-xl px-2.5 md:px-20"
+>
+	<article class="sm:w-1/2">
+		<h2
+			class="max-w-md text-4xl font-bold text-center sm:text-5xl sm:text-left text-slate-900"
+		>
+			We Innovate
+			<span class="text-indigo-700">Where No CMR</span>
+			Has Gone Before...
+		</h2>
+		<p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700">
+			We're leaders in the industry. Our app is state-of-the-art and will take
+			your experience to the next level...
+		</p>
+		<p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700">
+			Think Future. Think TeamManager.
+		</p>
+	</article>
+	<img class="w-1/2" src="{% static 'images/hero.png' %}" alt="rocketdab" />
+</section>
 
-{% endblock content %}
+{% include 'footer.html' %} {% endblock content %}
