--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -5,7 +5,6 @@
 
 {% block content %} 
 
-{% include 'header.html' %}
 <section
 	id="hero"
 	class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40 widescreen:section-min-height tallscreen:section-min-height h-full mx-auto w-full max-w-screen-xl px-2.5 md:px-20"
@@ -29,4 +28,4 @@
 	<img class="w-1/2" src="{% static 'images/hero.png' %}" alt="rocketdab" />
 </section>
 
-{% include 'footer.html' %} {% endblock content %}
+ {% endblock content %}
