--- a/templates/header.html
+++ b/templates/header.html
@@ -17,6 +17,11 @@
 			<div class="h-full flex items-center space-x-4">
 				{% if user.is_authenticated %}
 				<a
+					href="{% url 'teams' %}"
+					class="text-gray-700 hover:text-gray-900"
+					>Teams</a
+				>
+				<a
 					href="{% url 'account_logout' %}"
 					class="text-gray-700 hover:text-gray-900"
 					>Logout</a
